# ComfyUI-OrpheusTTS-LMStudio

./: .gitignore  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
example_workflows/: OrpheusTTSLMStudioExample.json
node/: decoder.py  orpheus_lmstudio_tts.py  orpheustts_lmstudio.py
