[project]
name = "ComfyUI-Orpheus-LMStudio"
description = "Generate Orpheus TTS audio via LM Studio"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/phazei/ComfyUI-Orpheus-LMStudio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phazei"
DisplayName = "ComfyUI-Orpheus-LMStudio"
Icon = ""
