[project]
name = "ComfyUI-OrpheusTTS-LMStudio"
description = "Generate Orpheus TTS audio via LM Studio"
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/phazei/ComfyUI-OrpheusTTS-LMStudio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "phazei"
DisplayName = "ComfyUI-OrpheusTTS-LMStudio"
Icon = ""
